--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "build-gallery.mjs",
   "type": "module",
   "scripts": {
-    "build": "node build-gallery.mjs"
+    "build": "node build-gallery.mjs",
+    "mock": "node scripts/use-mock.mjs"
   },
   "dependencies": {
     "cloudinary": "^1.39.2"
