--- a/package.json
+++ b/package.json
@@ -2,13 +2,25 @@
   "name": "cardgallery",
   "version": "1.0.0",
   "description": "Static card gallery site powered by Cloudinary and GitHub Pages.",
-  "main": "build-gallery.mjs",
   "type": "module",
   "scripts": {
-    "build": "node build-gallery.mjs",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "fetch": "node -r dotenv/config build-gallery.mjs",
     "mock": "node scripts/use-mock.mjs"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.14.0",
     "cloudinary": "^1.39.2"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.14.0",
+    "autoprefixer": "^10.4.16",
+    "dotenv": "^17.2.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.13"
   }
 }
