--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "build": "astro build",
     "preview": "astro preview",
     "fetch": "node -r dotenv/config build-gallery.mjs",
-    "mock": "node scripts/use-mock.mjs"
+    "mock": "node scripts/use-mock.mjs",
+    "lint": "astro check"
   },
   "dependencies": {
     "@cloudinary/url-gen": "^1.14.0",
     "cloudinary": "^1.39.2"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.5",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.14.0",
     "autoprefixer": "^10.4.16",
     "dotenv": "^17.2.3",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.9.3"
   }
 }
