--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "build": "astro build",
     "preview": "astro preview",
     "fetch": "node -r dotenv/config build-gallery.mjs",
+    "sync:travel": "node -r dotenv/config scripts/sync-travel-points.mjs --folder Countries --write",
     "mock": "node scripts/use-mock.mjs",
     "lint": "astro check"
   },
   "dependencies": {
+    "@astrojs/react": "^3.6.3",
     "@cloudinary/url-gen": "^1.14.0",
-    "cloudinary": "^1.39.2"
+    "cloudinary": "^1.39.2",
+    "leaflet": "^1.9.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.5",
@@ -22,6 +27,7 @@
     "astro": "^4.14.0",
     "autoprefixer": "^10.4.16",
     "dotenv": "^17.2.3",
+    "@types/leaflet": "^1.9.21",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.9.3"
